# Kaggle_comp_house_price_interval

./: best_model_fold0_alpha0.pth  best_model_fold0_alpha1.pth  best_model_fold1_alpha0.pth  best_model_fold1_alpha1.pth  best_model_fold2_alpha0.pth  best_model_fold2_alpha1.pth  best_model_fold3_alpha0.pth  best_model_fold3_alpha1.pth  best_model_fold4_alpha0.pth  best_model_fold4_alpha1.pth  ensembled_lgbm_xgb_nn_v4.ipynb  main.py  meta_throw_a_lot_of_models.ipynb  pyproject.toml  tranformation_lightgbm.ipynb  xgboost_full-Copy1.ipynb  xgboost_full.ipynb  xgboost_full_v2.ipynb
.ipynb_checkpoints/: cleaning-checkpoint.ipynb  xgboost_full_v2-checkpoint.ipynb
